<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="pref_category_security_key"
        app:title="@string/pref_category_security">

        <SwitchPreferenceCompat
            app:key="@string/pref_key_ip_permission_enabled"
            app:title="@string/pref_title_ip_permission"
            app:summary="@string/pref_summary_ip_permission"
            app:defaultValue="true" />

        <EditTextPreference
            app:key="@string/pref_key_server_password"
            app:title="@string/pref_title_password_protect"
            app:dialogTitle="@string/pref_dialog_title_set_password"
            app:useSimpleSummaryProvider="false"/> </PreferenceCategory>

    <Preference
        app:key="pref_key_shared_folder"
        app:title="Shared Folder"
        app:summary="Select the folder to share" />


</PreferenceScreen>