<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.SetupActivity">

    <ImageView
        android:id="@+id/ivAppIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvSetupTitle"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/tvSetupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintTop_toBottomOf="@id/ivAppIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvSetupDescription"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvSetupDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setup_description"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvSetupTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnChooseFolder"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnChooseFolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_shared_folder"
        app:icon="@drawable/ic_folder"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvSetupDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>